<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#90A4AE"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:ems="5"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:labelFor="@id/appName"
            android:text="@string/smartbucks"
            android:textSize="50sp" tools:targetApi="o" />

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:contentDescription="@null"
            app:srcCompat="@drawable/SmartBucks" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="2sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userName"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:text="@string/user_name"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/enterUserName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Apha-Numeric"
            android:inputType="textPersonName"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phNr"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:text="@string/phone_nr"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/enterPhNr"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="+49 176 0000 0000"
            android:inputType="phone"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/psWd"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:layout_weight="1"
            android:text="@string/password"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/enterPsWd"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="minimum 5 digit"
            android:inputType="phone"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/monInc"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:layout_weight="1"
            android:text="@string/monthly_inc"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/enterMonInc"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Amount"
            android:inputType="numberDecimal"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/stExp"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:layout_weight="1"
            android:text="@string/stable_exp"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/enterStExp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Rent+Bills+Ins"
            android:inputType="numberDecimal"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rent"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="7dp"
            android:layout_weight="1"
            android:text="@string/rent"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/enterRent"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Amount"
            android:inputType="numberDecimal"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bills"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:layout_weight="1"
            android:text="@string/bills"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/enterBills"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Amount"
            android:inputType="numberDecimal"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ins"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:layout_weight="1"
            android:text="@string/insurance"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/enterIns"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Amount"
            android:inputType="numberDecimal"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/contButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/cont"
        android:textSize="25sp" />

</LinearLayout>